--- a/arch/arm/configs/tn_imx_defconfig
+++ b/arch/arm/configs/tn_imx_defconfig
@@ -219,6 +219,7 @@ CONFIG_USB_NET_CDC_NCM=m
 CONFIG_USB_NET_CDC_SUBSET=m
 # CONFIG_USB_NET_ZAURUS is not set
 CONFIG_BCMDHD=m
+CONFIG_BCMDHD_SDIO=m
 CONFIG_BCMDHD_FW_PATH="/lib/firmware/brcm/fw_bcmdhd.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/lib/firmware/brcm/bcmdhd.cal"
 CONFIG_HOSTAP=y
