--- a/arch/arm/configs/tn_imx_defconfig
+++ b/arch/arm/configs/tn_imx_defconfig
@@ -297,6 +297,7 @@ CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_VIDEO_MXC_OUTPUT=y
 CONFIG_VIDEO_MXC_CAPTURE=y
 CONFIG_VIDEO_MXC_CSI_CAMERA=m
+CONFIG_VIDEO_MXC_CSI_CAMERA_LEGACY=m
 CONFIG_MXC_VADC=y
 CONFIG_MXC_MIPI_CSI=y
 CONFIG_MXC_CAMERA_OV5640_MIPI=m
