ARM: dts: EDM1-IMX7D: specify to use ov5645_mipi_v2 driver for OV5645 MIPI-CSI2 camera

--- a/arch/arm/boot/dts/imx7d-edm1-qca.dtsi
+++ b/arch/arm/boot/dts/imx7d-edm1-qca.dtsi
@@ -855,7 +855,7 @@
 	status = "okay";
 
 	ov5645_mipi: ov5645_mipi@3c {
-		compatible = "ovti,ov5645_mipi";
+		compatible = "ovti,ov5645_mipi_v2";
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_mipi_csi &pinctrl_mipi_csi_1>;
 		reg = <0x3c>;
